# SHA256

./: CMakeLists.txt  Michele_Pasetto_VR495361_SHA256.tex  README.md  RELAZIONE.md  relazione.md  run_test.sh
.github/workflows/: test.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
include/: cache.h  common.h  queue.h  sha256_utils.h
script/: lib.sh
src/: cache.c  client.c  queue.c  server.c  sha256_utils.c
test/: password.txt
